--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "express": "^4.17.1",
     "express-jwt": "^5.3.1",
     "express-validator": "^6.4.0",
+    "formidable": "^1.2.1",
     "google-auth-library": "^5.9.2",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.15",
